src/app/components/profil/loggedin/loggedin.component.css
.logoGreenMedium:hover {
  color: #005B51;
}

.red {
  color: #DC3545;
}

.red:hover {
  color: #C82333;
}

button{
  border: none;
  background-color: transparent;
}

.resp {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 25%;
  background-color: #F3FBED;
  z-index: -1;
}

.flex {
  display: flex;
}

.column {
  flex-flow: column;
}

.profile {
  min-width: 25%;
  max-width: 25%;
  background-color: #F3FBED;
}

.right-box {
  flex: 1;
}

app-profile-tour-list {
  overflow-y: auto;
}

